# octo-apm-demo

./: .dockerignore  .env.example  .env.local.example  .gitignore  .gitleaks.toml  404.html  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  env.template  index.html  mkdocs.yml  package-lock.json  requirements-docs.txt  requirements.txt  sitemap.xml
.github/: dependabot.yml
.github/workflows/: mkdocs-deploy.yml
.planning/: PHASE-8-BRIEF.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  SECURITY.md  STATE.md  config.json  v1.1-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
architecture/: index.html
architecture/correlation-contract/: index.html
architecture/data-model/: index.html
architecture/database-integration/: index.html
architecture/diagrams/: checkout-payment-flow.drawio  deploy-topology.drawio  index.html  observability-flow.drawio  platform-overview.drawio  private-demo-observability-reference.drawio
architecture/framework/: index.html
architecture/platform-overview/: index.html
architecture/service-inventory/: index.html
architecture/system-design/: index.html
assets/js/: placeholder-config.js
crm/: .env.example  .gitignore  Dockerfile  README.md  REFERENCE_PLATFORM_GUIDE.md  __init__.py  docker-compose.yml  index.html  mkdocs.yml  pytest.ini  requirements-dev.txt  requirements.txt
crm/architecture/: index.html
deploy/: .gitignore  BOM.md  BOOTSTRAP-README.md  OBSERVABILITY-BOOTSTRAP.md  RUNBOOK-TOMORROW.md  bootstrap.sh  credentials.template  deploy-apm-java-demo.sh  deploy-crm.sh  deploy-shop.sh  deploy.sh  destroy.sh  env.template  init-tenancy.sh  pre-flight-check.sh  validate-deployment.sh  verify.sh
deploy/wizard/: README.md  pyproject.toml
deploy/wizard/src/octo_wizard/: __init__.py  cli.py  discovery.py  plan.py
deploy/wizard/tests/: test_plan.py
docs/: API.md  CHANGELOG_OBSERVABILITY_V2_2026-04-12.md  CONFIGURATION.md  DEVELOPMENT.md  GETTING-STARTED.md  QUICKSTART.md  TESTING.md  install-guide.md  observability-enhancement-plan.md  simulation-lab-architecture.html
docs-site/: architecture.md  index.md
drone-shop/: index.html
getting-started/: index.html
hooks/: repo_vars.py
integrations/: index.html
introduction/: index.html
k6/: db_stress.js  load_test.js  order_to_cash.js
observability/: index.html
observability-v2/: index.html
operations/: index.html
search/: search_index.json
server/: auth_security.py  bootstrap.py  config.py  crm_catalog_sync.py  database.py  db_compat.py  db_init.sql  main.py  order_sync.py  store_service.py
services/async-worker/: Dockerfile  README.md  pyproject.toml
services/async-worker/k8s/: deployment.yaml
services/async-worker/src/octo_async_worker/: __init__.py  cli.py  config.py  dlq_drain.py  streams.py  telemetry.py  worker.py
services/async-worker/src/octo_async_worker/handlers/: __init__.py  order_sync.py
services/async-worker/tests/: conftest.py  test_recovery.py  test_streams.py  test_worker.py
services/cache/client/: pyproject.toml
services/cache/client/octo_cache/: __init__.py  client.py
services/edge-fuzz/: pyproject.toml
services/edge-fuzz/src/octo_edge_fuzz/: __init__.py  cli.py  fuzzer.py  telemetry.py
services/edge-fuzz/tests/: test_fuzzer.py
services/load-control/: Dockerfile  README.md  pyproject.toml
services/load-control/k8s/: deployment.yaml
services/load-control/src/octo_load_control/: __init__.py  api.py  events.py  executor.py  profiles.py  runs.py  telemetry.py
services/load-control/tests/: test_api.py  test_profiles.py  test_runs.py
services/object-pipeline/: Dockerfile  README.md  pyproject.toml
services/object-pipeline/k8s/: deployment.yaml
services/object-pipeline/src/octo_object_pipeline/: __init__.py  api.py  cli.py  events.py  handlers.py  telemetry.py
services/object-pipeline/tests/: test_pipeline.py
services/remediator/: Dockerfile  README.md  pyproject.toml
services/remediator/k8s/: deployment.yaml  hpa-autorevert-cronjob.yaml
services/remediator/src/octo_remediator/: __init__.py  api.py  autorevert.py  cli.py  metrics.py  run_store.py  telemetry.py
services/remediator/src/octo_remediator/playbooks/: __init__.py  base.py  cache_flush.py  restart_deployment.py  scale_hpa.py
services/remediator/tests/: conftest.py  test_api.py  test_metrics.py  test_playbooks.py  test_run_store.py
shop/: .dockerignore  .env.example  .env.local.example  Dockerfile  README.md  __init__.py  docker-compose.yml  generate_new_products.py  mkdocs.yml  package-lock.json  package.json  pytest.ini  requirements-dev.txt  requirements.txt  rlm_security_sso_audit_report.md
site/: index.md  introduction.md
testing/: index.html
tests/: test_admin_host_helper.py  test_compute_java_app_server_surface.py  test_compute_langfuse_surface.py  test_compute_synthetic_users_surface.py  test_config_portability.py  test_deployment_parity_release_gates.py  test_documentation_architecture_closure.py  test_integration_schema_endpoint.py  test_log_analytics_attack_assets.py  test_log_analytics_detection_reliability.py  test_observability_asset_contract.py  test_oke_langfuse_surface.py  test_orders_internal_auth.py  test_pre_flight_check.py  test_service_url_aliases.py  test_shop_catalog_sync.py  test_signal_contract_inventory.py  test_stress_demo_surface.py  test_unified_deploy_surface.py
tools/stress-runner/: Dockerfile  pyproject.toml
tools/stress-runner/octo_stress_runner/: __init__.py  main.py
tools/stress-runner/scenarios/: catalog_browse.js  checkout_journey.js  login_burst.js
tools/traffic-generator/: Dockerfile  README.md  pyproject.toml
tools/traffic-generator/k8s/: deployment.yaml
tools/traffic-generator/octo_traffic/: __init__.py  cli.py  config.py  distributions.py  population.py  session.py  telemetry.py
tools/traffic-generator/tests/: test_config.py  test_distributions.py  test_session.py
workshop/: index.html
(+853 files in other folders)
