[project]
name = "octo-provisioning-wizard"
version = "1.0.0"
description = "Interactive CLI that discovers OCI tenancy resources and drives the right deploy-script chain"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.7",
    "questionary>=2.0",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
oci = ["oci>=2.130"]

[project.scripts]
octo-wizard = "octo_wizard.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
