[project]
name = "octo-edge-fuzz"
version = "1.0.0"
description = "Generates forged-auth + oversized-payload bursts for the edge-auth-failure-burst load-control profile"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "respx>=0.21"]

[project.scripts]
octo-edge-fuzz = "octo_edge_fuzz.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
