[project]
name = "octo-remediator"
version = "1.0.0"
description = "Alarm-driven remediation service — matches OCI alarm patterns to playbooks, approval-gated execution, audit trail"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.112",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "httpx>=0.27",
    "redis>=5.0",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "fakeredis>=2.23"]
k8s = ["kubernetes>=30.1"]

[project.scripts]
octo-remediator = "octo_remediator.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
