[project]
name = "octo-stress-runner"
version = "1.0.0"
description = "FastAPI wrapper around the k6 binary for the OKE stress demo (Phase 7)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["octo_stress_runner*"]
exclude = ["tests*", "scenarios*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
